# cmescraper

./: README.md  pyproject.toml
cmescraper/: cme.py  settlement.py
tests/: settlement_test.py
