[tool.poetry]
name = "cmescraper"
version = "0.1.0"
description = ""
authors = ["snimmo <stephennimmo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tentaclio = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
poethepoet = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest -v"

